[tool.poetry]
name = "md_wiki_to_html"
version = "0.1.0"
description = "Convert Markdown wiki pages to HTML"
authors = ["Nick Pegg <nick@nickpegg.com>"]
license = "MIT"

[tool.poetry.scripts]
md_wiki_to_html = 'md_wiki_to_html.cli:main'

[tool.poetry.dependencies]
python = ">=3.8.0"
Markdown = ">=3.3.4"
Pygments = ">+2.10.0"
pymdown-extensions = ">=9.0"
Jinja2 = ">=3.0.2"

[tool.poetry.dev-dependencies]
black = "*"
mypy = "*"
pytest = "*"
types-Markdown = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
